--- a/CSS/style_add.css
+++ b/CSS/style_add.css
@@ -6,10 +6,48 @@
    
 }
 
+.title-container {
+    display: flex;
+    background-color: #751315;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+  }
 
-form {
+  .title-container h1 {
+    color: #dee2e6;
+    letter-spacing: 5px;
+  }
+
+  .button-container {
+    display: flex;
+    flex-direction: row;
+    justify-content:flex-start;
+    background-color:#dee2e6;
+    
+  }
+
+ 
+.add-button input[type=submit]{
+    width: 100px;
+    height: 50px;
+    background-color: #751315;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    font-size: 14px;
+    cursor: pointer;
+    margin: 20px;  
+}
+
+.add-button input[type=submit]:hover {
+    background-color: #600b0e;
+    transition: background-color 0.2s;
+}
+
+for {
     margin: auto;
-    width:70%;
+    width:100%;
     padding-top: 20px;
 }
 
@@ -50,4 +88,53 @@ form {
 .naslov {
     text-align: center;
     color: #3274d6;
+}
+
+.add-form {
+    width: 600px;
+    background-color: #ffffff;
+    box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
+    margin: 100px auto;
+}
+.add-form h1 {
+    text-align: center;
+    color: #5b6574;
+    font-size: 24px;
+    padding: 20px 0 20px 0;
+    border-bottom: 1px solid #dee0e4;
+}
+.add-form form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 20px;
+}
+
+
+.add-form form input[type="number"], .add-form form input[type="text"] {
+    width: 460px;
+    height: 50px;
+    border: 1px solid #dee0e4;
+    margin-bottom: 20px;
+    padding: 0 15px;
+}
+
+.add-form form input[type="submit"] {
+ 
+    width: 25%;
+    padding: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: #751315;
+   border: 0;
+    cursor: pointer;
+    font-weight: bold;
+    color: #ffffff;
+    transition: background-color 0.2s;
+    border-radius: 8px;
+    
+}
+.add-form form input[type="submit"]:hover {
+  background-color: #600b0e;
+    transition: background-color 0.2s;
 }
