--- a/CSS/style_tab.css
+++ b/CSS/style_tab.css
@@ -8,12 +8,55 @@
    
 }
 
-.artikli-table {
+.title-container {
+    display: flex;
+    background-color: #751315;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .title-container h1 {
+    color: #dee2e6;
+    letter-spacing: 5px;
+  }
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     width: 100%;
+  }
+  
+  .table-container {
+    width: 85%;
+    margin: 10px;
+    
+
+  }
+  
+  .link-container {
+    width: 15%;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color:#dee2e6;
+    box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
+
+  }
+  
+
+.artikli-table {
+   width:100%;
     border-collapse: collapse;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     margin-bottom: 50px;    
+    border: 1px solid #dee2e6;
+    box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
+    
 }
 
 
@@ -39,8 +82,7 @@
     border: none;
     border-radius: 8px;
     font-size: 14px;
-    cursor: pointer;
-   
+    cursor: pointer; 
 }
 
 
@@ -48,6 +90,10 @@
     background-color: #600b0e;
     transition: background-color 0.2s;
 }
+
+.artikli-table tr:nth-child(even) {
+    background-color: #dee2e6;
+ }
 
 .naslov {
     text-align: center;
@@ -58,6 +104,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background-color:#dee2e6; 
   }
 
  
@@ -71,13 +118,28 @@
     border-radius: 8px;
     font-size: 14px;
     cursor: pointer;
-    margin: 20px;
-   
-    
-    
+    margin: 20px;   
 }
 
 .add-button input[type=submit]:hover {
     background-color: #600b0e;
     transition: background-color 0.2s;
 }
+
+.form-index input[type="submit"] {
+    width: 100px;
+    height: 50px;
+    background-color: #751315;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    font-size: 14px;
+    cursor: pointer;
+    margin: 20px;
+}
+
+.form-index input[type="submit"]:hover {
+    background-color: #600b0e;
+    transition: background-color 0.2s;
+}
+
