--- a/CSS/style_add_lager.css
+++ b/CSS/style_add_lager.css
@@ -51,6 +51,7 @@ for {
     padding-top: 20px;
 }
 
+
 .naslov {
     text-align: center;
     color: #3274d6;
@@ -76,7 +77,7 @@ for {
     padding-top: 20px;
 }
 
-.add-form form input[type="number"], .add-form form input[type="text"], .add-form form input[type="email"] {
+.add-form form input[type="number"], .add-form form input[type="text"] {
     width: 460px;
     height: 50px;
     border: 1px solid #dee0e4;
@@ -104,3 +105,11 @@ for {
     transition: background-color 0.2s;
 }
 
+ .add-form form select {
+    width: 460px;
+    height: 50px;
+    border: 1px solid #dee0e4;
+    margin-bottom: 20px;
+    padding: 0 15px;
+    background: transparent;
+}
