--- a/CSS/style_work.css
+++ b/CSS/style_work.css
@@ -105,7 +105,11 @@
     background-color:#dee2e6; 
   }
 
- 
+  .left-side {
+    display: flex;
+    flex-direction: row;
+    
+}
 
 .add-button input[type=submit]{
     width: 100px;
@@ -124,6 +128,10 @@
     transition: background-color 0.2s;
 }
 
+
+
+
+
 .form-index input[type="submit"] {
     width: 100px;
     height: 50px;
@@ -140,3 +148,8 @@
     background-color: #600b0e;
     transition: background-color 0.2s;
 }
+
+
+
+
+
