--- a/CSS/style_lager.css
+++ b/CSS/style_lager.css
@@ -101,16 +101,23 @@
 
 .button-container {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     background-color:#dee2e6; 
   }
-
+  
   .left-side {
     display: flex;
     flex-direction: row;
-    
-}
+  }
+  
+  .left-side-inner {
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .add-button {
+    margin-right: 10px;
+  }
 
 .add-button input[type=submit]{
     width: 100px;
@@ -129,10 +136,6 @@
     transition: background-color 0.2s;
 }
 
-
-
-
-
 .form-index input[type="submit"] {
     width: 100px;
     height: 50px;
@@ -149,8 +152,3 @@
     background-color: #600b0e;
     transition: background-color 0.2s;
 }
-
-
-
-
-
