--- a/CSS/style_tab.css
+++ b/CSS/style_tab.css
@@ -31,12 +31,11 @@
   .table-container {
     width: 85%;
     margin: 10px;
-    
-
   }
   
   .link-container {
     width: 15%;
+    height: 310px;
     margin: 10px;
     display: flex;
     flex-direction: column;
@@ -44,7 +43,6 @@
     align-items: center;
     background-color:#dee2e6;
     box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
-
   }
   
 
